# imgm

./: CMakeLists.txt  README.md
app/: main.cpp
include/: BmpImage.h  Image.h  ImageProcessing.h  ImageReader.h  PgmImage.h  PixelManager.h  Tools.h
src/: BmpImage.cpp  PgmImage.cpp  Tools.cpp
